# pySMX

./: .gitignore  .readthedocs.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  VERSION  pyproject.toml  set_stage_configs.py  setup.cfg  setup.py  testing.py  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/general/: gen_cli.md  gen_template.md
pysmx/: cli.py  exceptions.py  template.py  utils.py  version.py
pysmx/hid/: discovery.py  pipe.py
pysmx/sdk/: api.py  config.py  device_info.py  inputs.py  packets.py  sensors.py
pysmx/usb/: discovery.py
tests/unit/: test_template.py  test_version.py
